stylesheets/home.css
:root {
	--prm-bg: #00A6CE;
	--sec-bg: #57565A;
	--ter-bg: #32292F;
}
body {
	font-family: Roboto;
	font-size: 16px;
	line-height: 20px;
	background-color: #fff;
	color: var(--sec-bg);
}
p {	margin-bottom: 13px;}

#wrapper {
	width: 100%;
	margin: 0 auto;
}

.jumbotron {
	background: none;
	text-align: center;
	padding-top: 60px;
	padding-bottom: 100px;
	margin-bottom: 0;
}
.jumbotron h1 { font-weight: 400;}
.jumbotron p {
	font-size: 32px;
	font-weight: 300;
	line-height: 4rem;
	padding: 8px;
}
.muted { color: #9D9BA0 !important;}
.fa {
	vertical-align: middle;
	margin-right: 2px;
}
a {	color: #9D9BA0;}
a:hover,
a.active,
a:active {
	color: var(--prm-bg);
}
h1, h2, h3, h4 {
	margin-top: 10px;
	margin-bottom: 5px;
	font-weight: 700;
	font-family: 'Roboto Condensed';
}
h3 {	font-size: 28px;}
h2 {	font-size: 36px;}

.bg-gray {
	background: var(--sec-bg) !important;
	color: #fff;
}
.bg-blue {
	background: var(--prm-bg);
	color: #fff;
}
.btn {
	border: 0px;
}
.btn-info,
.btn-info:hover,
.btn-info:active,
.btn-info:visited {
	background-color: var(--prm-bg);
	box-shadow: 2px 2px 3px rgba(0,0,0, .2);
}
section {
	padding-top: 50px;
	padding-bottom: 50px;
}
.container { width: 940px;}

nav a i { vertical-align: text-top !important;}
.nav-container {
	display: flex;
	justify-content: flex-start;
}
.nav-item {
	width: 25%;
	height: auto;
}
header .container {
	padding: 0;
	width: 840px;
}
header {
	width: 100%;
	height: 100px;
	background-color: #fff;
	border-bottom: 3px solid var(--prm-bg);
	-webkit-transition: height 0.3s;
	-moz-transition: height 0.3s;
	-ms-transition: height 0.3s;
	-o-transition: height 0.3s;
	transition: height 0.3s;
}
header nav {
	display: inline-block;
	text-transform: uppercase;
}
header nav a {
	padding: 20px;
	font-weight: 500;
	font-size: 15px;
	-webkit-transition: all 0.3s;
	-moz-transition: all 0.3s;
	-ms-transition: all 0.3s;
	-o-transition: all 0.3s;
	transition: all 0.3s;
}
header nav a,
header nav a:visited {
	color: #666;
}
header nav li {
	float: left;
	display: inline-block;
	height: 100px;
	line-height: 85px;
	vertical-align: middle;
}
footer {
	background-color: var(--ter-bg);
	color: #9D9BA0;
	text-align: center;
	padding: 80px;
	font-size: 16px;
}
footer a {
	color: #9D9BA0;
}

